# math_vector

./: .gitignore  Cargo.toml  README.md  test.ll  test.mir  todo.txt
src/: file_conversion.rs  lib.rs  matrix.rs  tests.rs  todo  todo.txt  vector.rs
src/matrix/: mat_util_traits.rs  matrix_builders.rs  matrix_exprs.rs  matrix_structs.rs  vectorized_matrix_structs.rs
src/matrix/matrix_structs/: array_matrix_structs.rs  binding_matrix_structs.rs  generator_matrix_structs.rs  macroed_matrix_structs.rs  math_matrix_structs.rs  misc_matrix_structs.rs  ordering_matrix_structs.rs  slice_matrix_structs.rs  vectorizing_matrix_structs.rs
src/vector/: vec_util_traits.rs  vector_builders.rs  vector_exprs.rs  vector_initialization.rs  vector_math.rs  vector_structs.rs  vector_wrapper_builders.rs
src/vector/vector_structs/: array_vector_structs.rs  binding_vector_structs.rs  generator_vector_structs.rs  macroed_vector_structs.rs  math_vector_structs.rs  misc_vector_structs.rs  ordering_vector_structs.rs  slice_vector_structs.rs
