[package]
name = "math_vector"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alga = "0.9.3"
num-traits = "0.2"
csv = { version = "1.4.0", optional = true }

[dev-dependencies]
rand = "0.9.0"

[features]
file-conversion = []
csv = ["file-conversion", "dep:csv"]

[profile.profiling]
inherits = "release"
debug = true