[package]
name = "math_vector"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alga = "0.9.3"
num-traits = "0.2"
csv = { version = "1.4.0", optional = true }
matrix_merchant = { version = "0.1.1", optional = true }
num-complex = { version = "0.4.6", optional = true }

[dev-dependencies]
rand = "0.9.0"

[features]
file-conversion = []
csv = ["file-conversion", "dep:csv"]
mtx = ["file-conversion", "dep:matrix_merchant", "dep:num-complex"]

[profile.profiling]
inherits = "release"
debug = true
